# goit-pythonweb-hw-06

./: connect.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/versions/: 96df7dc30c02_init.py
