[project]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = ""
authors = [{ name = "Osadchyi Yurii", email = "malicious1986@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy (>=2.0.44,<3.0.0)", "alembic (>=1.17.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
